add opportunity to add new satellite

--- a/src/app/components/add-sat-form/add-sat-form.html
+++ b/src/app/components/add-sat-form/add-sat-form.html
@@ -3,16 +3,16 @@
     Name:
     <input type="text" name="name" [(ngModel)]="satellite.name" required />
   </label>
-
+<br>
   <label>
     Line 1:
     <input type="text" name="line1" [(ngModel)]="satellite.line1" required />
   </label>
-
+<br>
   <label>
     Line 2:
     <input type="text" name="line2" [(ngModel)]="satellite.line2" required />
   </label>
-
-  <button type="submit">Add Satellite</button>
+<br>
+  <button type="submit" style="margin: 0 auto;">Add Satellite</button>
 </form>
